# test-one-here

./: README.md  pyproject.toml  telecom-ccai-monorepo.txt
telecom_ccai_monorepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
