# ==============================================================================
# Root pyproject.toml for the Telecom CCAI Monorepo (using uv)
#
# This file defines the project using the standard PEP 621 `[project]` table.
# It specifies shared development dependencies in `[project.optional-dependencies]`.
# ==============================================================================

# ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# NEW SECTION: Build System Definition
# This tells tools like uv/pip HOW to build your project. It's a best practice
# to always include this.
# ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "telecom-ccai-monorepo"
version = "0.1.0"
description = "A monorepo for the Telecom CCAI POC, containing Dialogflow CX agent definitions and fulfillment services."
authors = [
    { name = "Your Telecom Team", email = "ccai-dev-leads@example.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-json-logger>=2.0.7",  # Required by shared-logging package
]


[project.optional-dependencies]
dev = [
    # --- Core Tooling ---
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.8",
    "black>=23.11.0",
    "mypy>=1.7.0",

    # --- Google Cloud & Dialogflow Specific Tooling ---
    "google-cloud-dialogflow-cx>=1.22.0",
    "google-adk>=1.3.0",
    "google-cloud-storage>=2.14.0",
    "google-api-python-client>=2.110.0",
]


# ==============================================================================
# TOOL CONFIGURATION
# ==============================================================================

# ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# NEW & CRITICAL SECTION: Setuptools Configuration
# This tells setuptools to automatically find your local packages
# in the /packages directory so they can be installed.
# ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[tool.setuptools.packages.find]
where = ["packages"]  # Look for packages inside the 'packages' directory


[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "services",
    "packages",
    "agents"
]
addopts = "-ra --cov=services --cov=packages --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true